@startuml

title __HOME's Class Diagram__\n

  namespace com.mad.mymoon {
    namespace ui.home {
      class com.mad.mymoon.ui.home.HomeFragment {
          + onCreateView()
      }
    }
  }
  

  namespace com.mad.mymoon {
    namespace ui.home {
      class com.mad.mymoon.ui.home.HomeViewModel {
          - mText : MutableLiveData<String>
          + HomeViewModel()
          + getText()
      }
    }
  }
  

  com.mad.mymoon.ui.home.HomeFragment -up-|> androidx.fragment.app.Fragment
  com.mad.mymoon.ui.home.HomeFragment o-- com.mad.mymoon.ui.home.HomeViewModel : homeViewModel
  com.mad.mymoon.ui.home.HomeViewModel -up-|> androidx.lifecycle.ViewModel


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
